tests/ui/union.stderr
error: fixcol-derive error: Deriving ReadFixed on unions is not supported
 --> tests/ui/union.rs:5:1
  |
5 | union MyUnion {
  | ^^^^^

error: fixcol-derive error: Deriving WriteFixed on unions is not supported
 --> tests/ui/union.rs:5:1
  |
5 | union MyUnion {
  | ^^^^^
